--- a/Dockerfile2
+++ b/Dockerfile2
@@ -1,5 +1,5 @@
 ### STAGE 1: Build ###
-FROM node:latest
+FROM node:latest as build
 WORKDIR /usr/local/app
 COPY ./ /usr/local/app/
 RUN npm install
