--- a/Dockerfile2
+++ b/Dockerfile2
@@ -3,7 +3,8 @@ FROM node:latest as build
 WORKDIR /usr/local/app
 COPY ./ /usr/local/app/
 RUN npm install
-RUN npm run build
+#RUN npm run build
+CMD /bin/sh npm run build
 
 ### STAGE 2: Run ###
 FROM nginx:latest
