--- a/contact_ui_deployment.yml
+++ b/contact_ui_deployment.yml
@@ -16,7 +16,7 @@ spec:
   spec:
     containers:
     - name: contactuicontainer
-      image: ashokit/contact_ui_app
+      image: kunal325/apps55-front
       ports:
       - containerPort: 80
 ---
